@@ -12,6 +12,7 @@ except ImportError:
 import warnings
 
 from webob.acceptparse import (
+    AcceptEncoding,
     AcceptLanguage,
     AcceptCharset,
     MIMEAccept,
@@ -1041,6 +1042,7 @@ class BaseRequest(object):
     accept = accept_property('Accept', '14.1', MIMEAccept, MIMENilAccept)
     accept_charset = accept_property('Accept-Charset', '14.2', AcceptCharset)
     accept_encoding = accept_property('Accept-Encoding', '14.3',
+                                      AcceptClass=AcceptEncoding,
                                       NilClass=NoAccept)
     accept_language = accept_property('Accept-Language', '14.4', AcceptLanguage)
 
